@@ -37,8 +37,16 @@ fix_libtool_la () {
 	    for j in $(ls -1 *.la); do
 		sed -i~ \
 		    -e 's/ *-L *[^"'"'"' ][^"'"'"' ]*//g'\
-		    -e "s@\( \|=\)\(/usr/lib/lib\)@\1$cygwin_root\2@g"\
+		    -e "s@\( \|=\|'\)\(/[^ ]*usr/lib/lib\)\([^ ']*\)\.\(a\|la\|so\)[^ ']*@\1-l\3@g"\
 		    $j
+##		    -e "s@\( \|=\|'\)\(cyg\)\([^ ']*\)\(\.dll.a\|.a\)[^ ']*@\1lib\3\4@g"\
+##		    -e "s@\( \|=\|'\)\(/usr/lib/lib\)\([^ ']*\)\.\(a\|la\|so\)[^ ']*@\1-l\3@g"\
+##		    -e "s@\( \|=\|'\)\(/usr/lib/lib\)\([^.]*\)\.\(a\|la\|so\)[^ ']*@\1-l\3@g"\
+##		    -e "s@\( \|=\|'\)\(/usr/lib/lib\)\([^.]*\)[^ ']*@\1-l\3@g"\
+##		    -e "s@\( \|=\|'\)\(/usr/lib/\)\(lib\)@\1\3@g"\
+##		    -e "s@\( \|=\)\(/usr/lib/lib\)@\1$cygwin_root\2@g"\
+##		    -e "s@\( \|=\)\(/usr/lib/lib\)@\1$cygwin_root\2@g"\
+##		    -e "s@\( \|=\)\(/usr/lib/lib\)\([^ ]*\)[.]\(a\|dll\|la\|so[^ ]*\)@-l\2@g"\
 	    done
 	fi
     done
@@ -49,7 +57,9 @@ fix_libtool_la () {
     # more libtool fixups.  I love libtool.
     sed -i~ \
 	-e "s@^dlname=.*@dlname='../bin/$dll_prefix$base-$sover.dll'@" \
-	-e "s@^library_names=.*@library_names='$dll_prefix$base.dll.a'@" \
-	-e "s@^old_library=.*@old_library='$dll_prefix$base.a'@" \
+	-e "s@^library_names=.*@library_names='lib$base.dll.a'@" \
+	-e "s@^old_library=.*@old_library='lib$base.a'@" \
 	$inst/$prefix/lib/lib$base.la
+##	-e "s@^library_names=.*@library_names='$dll_prefix$base.dll.a'@" \
+##	-e "s@^old_library=.*@old_library='$dll_prefix$base.a'@" \
 }
